✏️chore: replace logo image file

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="영진은행">
-    <meta property="og:image" content="https://raw.githubusercontent.com/light9639/WooriBank/main/img/logo3.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/light9639/WooriBank/main/img/logo3.jpg">
     <meta property="og:description" content="영진은행 웹사이트">
     <title>영진은행</title>
     <link rel="shortcut icon" href="img/favicon.png">
@@ -27,8 +27,8 @@
         <div class="center clearFix">
             <h1 class="logo">
                 <a href="index.html">
-                    <img class="pc_logo" src="img/logo.png" alt="logo">
-                    <img class="mobile_logo" src="img/mobile_logo.png" alt="mobile_logo">
+                    <img class="pc_logo" src="img/logo.jpg" alt="logo">
+                    <img class="mobile_logo" src="img/mobile_logo.jpg" alt="mobile_logo">
                 </a>
             </h1>
             <div class="ham">
@@ -657,8 +657,8 @@
 
                 <h1 class="footer_logo">
                     <a href="index.html">
-                        <img class="pc_logo" src="img/logo.png" alt="logo">
-                        <img class="mobile_logo" src="img/mobile_logo.png" alt="mobile_logo">
+                        <img class="pc_logo" src="img/logo.jpg" alt="logo">
+                        <img class="mobile_logo" src="img/mobile_logo.jpg" alt="mobile_logo">
                     </a>
                 </h1>
             </div>
