--- a/frontend/login.html
+++ b/frontend/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="영진은행">
-    <meta property="og:image" content="http://donghosting.dothome.co.kr/wooribank/img/logo3.png">
+    <meta property="og:image" content="http://donghosting.dothome.co.kr/wooribank/img/logo3.jpg">
     <meta property="og:description" content="영진은행 웹사이트">
     <title>영진은행 로그인</title>
     <link rel="shortcut icon" href="img/favicon.png">
@@ -21,7 +21,7 @@
                         <div class="max-w-md mx-auto">
                             <div class="divide-y divide-gray-200">
                                 <div class="py-7 text-base leading-6 space-y-4 text-gray-700 sm:text-lg sm:leading-7">
-                                    <h1 class="logo"><a href="index.html"><img src="img/logo.png" alt="logo"></a></h1>
+                                    <h1 class="logo"><a href="index.html"><img src="img/logo.jpg" alt="logo"></a></h1>
                                     <p class="text-center">영진은행에서 안전한 인터넷뱅킹을 이용해보세요.</p>
                                     <div class="justify-center flex flex-col py-6 sm-py-12">
                                     <input name="email" style="margin-bottom: 10px;" placeholder="아이디" type="email" class=" px-2 py-2 outline-none border-2 border-gray-300 rounded-lg transition duration-200 ease-in-out hover:border-blue-600 focus:border-blue-600 focus:ring-blue-300 focus:ring">
