✏️chore: replace logo image file

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,8 +27,8 @@
         <div class="center clearFix">
             <h1 class="logo">
                 <a href="index.html">
-                    <img class="pc_logo" src="img/logo.jpg" alt="logo">
-                    <img class="mobile_logo" src="img/mobile_logo.jpg" alt="mobile_logo">
+                    <img class="pc_logo" src="img/logo.png" alt="logo">
+                    <img class="mobile_logo" src="img/mobile_logo.png" alt="mobile_logo">
                 </a>
             </h1>
             <div class="ham">
@@ -657,8 +657,8 @@
 
                 <h1 class="footer_logo">
                     <a href="index.html">
-                        <img class="pc_logo" src="img/logo.jpg" alt="logo">
-                        <img class="mobile_logo" src="img/mobile_logo.jpg" alt="mobile_logo">
+                        <img class="pc_logo" src="img/logo.png" alt="logo">
+                        <img class="mobile_logo" src="img/mobile_logo.png" alt="mobile_logo">
                     </a>
                 </h1>
             </div>
