--- a/frontend/register.html
+++ b/frontend/register.html
@@ -21,7 +21,7 @@
                         <div class="max-w-md mx-auto">
                             <div class="divide-y divide-gray-200">
                                 <div class="py-7 text-base leading-6 space-y-4 text-gray-700 sm:text-lg sm:leading-7">
-                                    <h1 class="logo"><a href="index.html"><img src="img/logo.jpg" alt="logo"></a></h1>
+                                    <h1 class="logo"><a href="index.html"><img src="img/logo.png" alt="logo"></a></h1>
                                     <p class="text-center"></p>
                                     <div class="justify-center flex flex-col py-6 sm-py-12">
                                     <label for="">이름</label><input name="name" placeholder="이름" type="text" required class="  px-2 py-2 outline-none border-2 border-gray-300 rounded-lg transition duration-200 ease-in-out hover:border-blue-600 focus:border-blue-600 focus:ring-blue-300 focus:ring">
@@ -40,7 +40,7 @@
                                     <button type="submit" class="transition rounded-lg duration-200 ease-in-out px-4 py-2 bg-blue-500 text-white focus:ring-blue-300 focus:ring hover:bg-blue-600 select-none outline-none">회원가입</button>
                                 </p>
                                 <p style="padding-bottom: 5px;" class="text-center font-normal"> 비밀번호를 잊으셨나요? <a href="#" class="text-blue-500 hover:text-blue-800">아이디/비밀번호 찾기</a></p>
-                                <p class="text-center font-normal"> 회원계정이 없으신가요? <a href="register.html" class="text-blue-500 hover:text-blue-800">지금 가입해보세요!</a></p>
+                                
                             </div>
                         </div>
                     </div>
