--- a/frontend/register.html
+++ b/frontend/register.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="영진은행">
+    <meta property="og:title" content="ヨンジン銀行">
     <meta property="og:image" content="http://donghosting.dothome.co.kr/wooribank/img/logo3.jpg">
-    <meta property="og:description" content="영진은행 웹사이트">
-    <title>영진은행 회원가입</title>
+    <meta property="og:description" content="ヨンジン銀行ウェブサイト">
+    <title>ヨンジン銀行新規登録</title>
     <link rel="shortcut icon" href="img/favicon.png">
     <link rel="stylesheet" href="css/login.css">
 </head>
@@ -24,22 +24,22 @@
                                     <h1 class="logo"><a href="index.html"><img src="img/logo.png" alt="logo"></a></h1>
                                     <p class="text-center"></p>
                                     <div class="justify-center flex flex-col py-6 sm-py-12">
-                                    <label for="">이름</label><input name="name" placeholder="이름" type="text" required class="  px-2 py-2 outline-none border-2 border-gray-300 rounded-lg transition duration-200 ease-in-out hover:border-blue-600 focus:border-blue-600 focus:ring-blue-300 focus:ring">
-                                    <label for="">이메일</label><input name="email" style="margin-bottom: 10px;" required placeholder="사용하실 이메일" type="email" class=" px-2 py-2 outline-none border-2 border-gray-300 rounded-lg transition duration-200 ease-in-out hover:border-blue-600 focus:border-blue-600 focus:ring-blue-300 focus:ring">
-                                    <label for="">전화번호</label><input name="phone" placeholder="전화번호"  required type="text" class=" px-2 py-2 outline-none border-2 border-gray-300 rounded-lg transition duration-200 ease-in-out hover:border-blue-600 focus:border-blue-600 focus:ring-blue-300 focus:ring">
-                                    <label for="">비밀번호</label><input name="password" placeholder="비밀번호" type="password" required class=" px-2 py-2 outline-none border-2 border-gray-300 rounded-lg transition duration-200 ease-in-out hover:border-blue-600 focus:border-blue-600 focus:ring-blue-300 focus:ring">
-                                    <label for="">비밀번호 확인</label><input name="confirmPassword" placeholder="비밀번호를 다시 입력해주세요" required type="password" class=" px-2 py-2 outline-none border-2 border-gray-300 rounded-lg transition duration-200 ease-in-out hover:border-blue-600 focus:border-blue-600 focus:ring-blue-300 focus:ring">
-                                    <label for="">주소</label><input name="address" placeholder="주소" type="text" required class=" px-2 py-2 outline-none border-2 border-gray-300 rounded-lg transition duration-200 ease-in-out hover:border-blue-600 focus:border-blue-600 focus:ring-blue-300 focus:ring">
-                                    <label for="">생년월일</label><input name="dateOfBirth" placeholder="생년월일" type="date" required class=" px-2 py-2 outline-none border-2 border-gray-300 rounded-lg transition duration-200 ease-in-out hover:border-blue-600 focus:border-blue-600 focus:ring-blue-300 focus:ring">
-                                    <label for="">주민등록번호</label><input name="ssn" placeholder="주민등록번호" type="text" required class=" px-2 py-2 outline-none border-2 border-gray-300 rounded-lg transition duration-200 ease-in-out hover:border-blue-600 focus:border-blue-600 focus:ring-blue-300 focus:ring">
+                                    <label for="">名前</label><input name="name" placeholder="名前" type="text" required class="  px-2 py-2 outline-none border-2 border-gray-300 rounded-lg transition duration-200 ease-in-out hover:border-blue-600 focus:border-blue-600 focus:ring-blue-300 focus:ring">
+                                    <label for="">メールアドレス</label><input name="email" style="margin-bottom: 10px;" required placeholder="ご利用になるメールアドレス" type="email" class=" px-2 py-2 outline-none border-2 border-gray-300 rounded-lg transition duration-200 ease-in-out hover:border-blue-600 focus:border-blue-600 focus:ring-blue-300 focus:ring">
+                                    <label for="">電話番号</label><input name="phone" placeholder="電話番号"  required type="text" class=" px-2 py-2 outline-none border-2 border-gray-300 rounded-lg transition duration-200 ease-in-out hover:border-blue-600 focus:border-blue-600 focus:ring-blue-300 focus:ring">
+                                    <label for="">パスワード</label><input name="password" placeholder="パスワード" type="password" required class=" px-2 py-2 outline-none border-2 border-gray-300 rounded-lg transition duration-200 ease-in-out hover:border-blue-600 focus:border-blue-600 focus:ring-blue-300 focus:ring">
+                                    <label for="">パスワード確認</label><input name="confirmPassword" placeholder="パスワードをもう一度入力してくださ電話" required type="password" class=" px-2 py-2 outline-none border-2 border-gray-300 rounded-lg transition duration-200 ease-in-out hover:border-blue-600 focus:border-blue-600 focus:ring-blue-300 focus:ring">
+                                    <label for="">住所</label><input name="address" placeholder="住所" type="text" required class=" px-2 py-2 outline-none border-2 border-gray-300 rounded-lg transition duration-200 ease-in-out hover:border-blue-600 focus:border-blue-600 focus:ring-blue-300 focus:ring">
+                                    <label for="">生年月日</label><input name="dateOfBirth" placeholder="生年月日" type="date" required class=" px-2 py-2 outline-none border-2 border-gray-300 rounded-lg transition duration-200 ease-in-out hover:border-blue-600 focus:border-blue-600 focus:ring-blue-300 focus:ring">
+                                    <label for="">マイナンバー</label><input name="ssn" placeholder="マイナンバー" type="text" required class=" px-2 py-2 outline-none border-2 border-gray-300 rounded-lg transition duration-200 ease-in-out hover:border-blue-600 focus:border-blue-600 focus:ring-blue-300 focus:ring">
                                     
                                 </div>
                             </div>
                             <div class="pt-6 text-base leading-6 font-bold sm:text-lg sm:leading-7">
                                 <p style="margin-bottom: 20px;" class="text-center">
-                                    <button type="submit" class="transition rounded-lg duration-200 ease-in-out px-4 py-2 bg-blue-500 text-white focus:ring-blue-300 focus:ring hover:bg-blue-600 select-none outline-none">회원가입</button>
+                                    <button type="submit" class="transition rounded-lg duration-200 ease-in-out px-4 py-2 bg-blue-500 text-white focus:ring-blue-300 focus:ring hover:bg-blue-600 select-none outline-none">新規登録</button>
                                 </p>
-                                <p style="padding-bottom: 5px;" class="text-center font-normal"> 비밀번호를 잊으셨나요? <a href="#" class="text-blue-500 hover:text-blue-800">아이디/비밀번호 찾기</a></p>
+                                <p style="padding-bottom: 5px;" class="text-center font-normal"> パスワードをお忘れですか？ <br/><a href="#" class="text-blue-500 hover:text-blue-800">ユーザーID・パスワードの確認</a></p>
                                 
                             </div>
                         </div>
@@ -74,14 +74,14 @@ document.getElementById("loginForm").addEventListener("submit", async function(e
       body: JSON.stringify(payload)
     });
 
-    if (!res.ok) throw new Error("이미 사용중인 이메일입니다.");
+    if (!res.ok) throw new Error("すでに使用されているメールアドレスです。");
 
     const data = await res.json();
-    alert("회원가입에 성공했습니다.");
-    // 회원가입 성공 후 리다이렉트
-    window.location.href = "/login.html"; // 회원가입 성공 후 이동할 페이지
+    alert("新規登録に成功しました。");
+    // 新規登録 성공 후 리다이렉트
+    window.location.href = "/login.html"; // 新規登録 성공 후 이동할 페이지
   } catch (err) {
-    alert("회원가입 중 에러가 발생했습니다. 다시 시도해주세요");
+    alert("新規登録中にエラーが発生しました。もう一度お試しください。");
   }
 });
 </script>
